<resources>
    <string name="app_name">p7MyMaps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="option5">option5</string>
    <string name="option6">option6</string>

    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="mymaps_1_0">MyMaps 1.0</string>
    <string name="mostrarme">Ver mi localizacion</string>
    <string name="ocultarme">Ocultar mi localizacion</string>
    <string name="arroz">Ver Arrocerias</string>
    <string name="farmacias">Ver Farmacias</string>
    <string name="ocultar">Ocultar todo</string>
    <string name="cerrar">Cerrar menu</string>
    <string name="salir">Salir app</string>
</resources>